--- a/Homework2/dyyue/index.html
+++ b/Homework2/dyyue/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pokemon Stream Graph</title>
+  <title>Pokemon Visualization Diagram</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
