--- a/Homework3/dyyue/index.html
+++ b/Homework3/dyyue/index.html
@@ -10,6 +10,8 @@
 
     <!-- Left half split into two -->
     <div id="left-panel" style="flex: 1; display: flex; flex-direction: column; gap: 20px; padding: 10px;">
+      <label for="zoomSlider">Zoom:</label>
+      <input type="range" id="zoomSlider" min=".8" max="2" step="0.1" value="1">
       <div id="star-chart" style="flex: 1; border: 1px solid #ccc; padding: 10px;">
         <h3>Average Stats Per Type</h3>
         <svg width="100%" height="100%"></svg>
@@ -24,13 +26,12 @@
     <div id="right-panel" style="flex: 1; border-left: 1px solid #ccc; padding: 10px;">
       <h3>Average Weight & Height by Pokémon Type</h3>
 
-  <!-- Sort buttons container -->
-  <div id="sort-buttons" style="margin-bottom: 10px;">
-    <button id="sort-desc">Most to Least</button>
-    <button id="sort-asc">Least to Most</button>
-    <button id="sort-alpha">Alphabetical</button>
-  </div>
-
+    <!-- Sort buttons container -->
+    <div id="sort-buttons" style="margin-bottom: 10px;">
+      <button id="sort-desc">Most to Least</button>
+      <button id="sort-asc">Least to Most</button>
+      <button id="sort-alpha">Alphabetical</button>
+    </div>
       <svg id="combo-chart" width="100%" height="100%"></svg>
     </div>
 
